# taskr

./: CHANGELOG.md  OVERVIEW.md  README.md  pyproject.toml
src/taskr/: __init__.py  logs.py
src/taskr/cli/: __init__.py  common.py
src/taskr/cli/commands/: __init__.py  add.py  backup.py  config.py  delete.py  done.py  info.py  list.py  modify.py  repeat.py  restore.py  sync.py
src/taskr/config/: __init__.py  base.py  manager.py  schema.py  syncs.py  utils.py
src/taskr/interface/: __init__.py  command.py  export.py  task.py
src/taskr/sync/: base.py
src/taskr/sync/reminders/: __init__.py  core.py  manager.py  osa.py
src/taskr/sync/taskd/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/config/: __init__.py  test_base.py  test_manager.py  test_schema.py  test_utils.py
tests/unit/interface/: __init__.py  test_command.py  test_export.py  test_task.py
